# python-dlipower

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST  MANIFEST.in  README  README.md  README.rst  README.txt  dli_power  dlipower.html  example.py  fence_dli  package.version  requirements.txt  screwdriver.yaml  setup.cfg  setup.py  tox.ini  travis.yml
dlipower/: __init__.py  debug.py  dlipower  dlipower.py
docs/: dlipower.html  dlipower.txt
docs/notebooks/: dlipower.ipynb  example.ipynb
docs/source/: commandline.rst  conf.py  dlipower_module.rst  index.rst
scripts/: dlipower  fence_dli
test/: simple_smoketest  test_dlipower.py  test_host_list
test/cassettes/: DLIPowerTest.test__pro__dlipower__status.yaml  DLIPowerTest.test__pro__dlipower__statuslist.yaml  DLIPowerTest.test__pro__powerswitch_user_password.yaml  TestDLIPowerEPCR.test__dlipower__load_configuration.yaml  TestDLIPowerEPCR.test__dlipower__save_configuration.yaml  TestDLIPowerEPCR.test__dlipower__status.yaml  TestDLIPowerEPCR.test__dlipower__statuslist.yaml  TestDLIPowerEPCR.test__dlipower__unicode__description.yaml  TestDLIPowerEPCR.test__dlipower__unicode__name.yaml  TestDLIPowerEPCR.test__dlipower__unicode__noname.yaml  TestDLIPowerEPCR.test__outlet__str__magic.yaml  TestDLIPowerEPCR.test__outlet__unicode__magic.yaml  TestDLIPowerEPCR.test__powerswitch_user_password.yaml  TestDLIPowerEPCR.test_command_on_outlets.yaml  TestDLIPowerEPCR.test_cycle.yaml  TestDLIPowerEPCR.test_determine_outlet.yaml  TestDLIPowerEPCR.test_off.yaml  TestDLIPowerEPCR.test_off_state_setter.yaml  (+81 more)
tests/: test_dlipower.py  test_host_list
(+50 files in other folders)
