[metadata]
author = Dwight Hubbard
author_email = 254983+dwighthubbard@users.noreply.github.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Systems Administration
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: System :: Power (UPS)

description = Control digital loggers web power switch
keywords = network, power switch, ups
license = BSD
long_description = file:README.md
long_description_content_type = text/markdown
name = dlipower
project_urls =
	Source = https://github.com/dwighthubbard/python-dlipower
url = https://github.com/dwighthubbard/python-dlipower/
version = 1.1.0

[options]
install_requires =
    requests
    beautifulsoup4

packages =
    dlipower

python_requires = >="3.6"
zip_safe = True

[screwdrivercd.version]
version_type = sdv4_SD_BUILD
